--- a/src/styles/App.scss
+++ b/src/styles/App.scss
@@ -4,7 +4,9 @@
 @use '/src/styles/user_list';
 @use '/src/styles/favoriteUsers';
 @use '/src/styles/containerList';
-/* Aquí van los estilos */
+
 body{
-    background-color: rgb(104, 104, 104);
+    margin: 0;
+    background-color: rgb(0, 0, 0);
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
 }
