--- a/src/styles/_favoriteUsers.scss
+++ b/src/styles/_favoriteUsers.scss
@@ -3,9 +3,10 @@
   flex: 1;
   max-width: 400px;
   opacity: 0;
-  transform: translateX(20px);
+  transform: translateX(10px);
   pointer-events: none;
   transition: all 0.5s ease-in-out;
+  max-height: 80vh;
 
   &.visible {
     opacity: 1;
@@ -20,10 +21,39 @@
     list-style: none;
     padding: 0;
   }
+}
 
+.favorite_card {
+  background-color: rgb(254, 255, 239);
+  border-radius: 10px;
+  padding: 1rem;
+  width: 280px;
+  height: 150px;
+  margin: 0 auto;
+  border: 2px solid #ffd700;
+  box-shadow: 0 0 12px 4px rgba(255, 215, 0, 0.6);
+  transition: box-shadow 0.3s ease, transform 0.3s ease;
+}
+
+.favorite_card:hover {
+  box-shadow: 0 0 16px 6px rgba(255, 215, 0, 0.8);
+  transform: scale(1.02);
+}
+
+.title_of_section_favorite{
+  color: antiquewhite;
+  margin-bottom: 20px;
+  margin-top: 10px;
+}
+
+@media (max-width: 1024px) {
   .user_card {
     flex: 1 1 100%;
-    max-height: 250px;
-    cursor: pointer;
+    max-width: 400px; 
+  }
+
+  .favorites-list {
+    max-width: 350px; 
+    margin: 0 auto; 
   }
 }
