--- a/src/styles/_filterUser.scss
+++ b/src/styles/_filterUser.scss
@@ -6,6 +6,8 @@
     justify-content: center;
     padding: 10px;
     color: antiquewhite;
+    margin-bottom: 20px;
+    gap: 1rem;
 }
 
 .search_user{
@@ -14,9 +16,10 @@
     padding: 5px;
     border-radius: 10px;
     border: solid 2px rgba(101, 39, 134, 0.765);
-    width: 280px;
+    max-width: 100%;
 }
 
 .favorites-counter{
     margin-left: 5%;
+    font-size: 1.3rem;
 }
