--- a/src/styles/_header.scss
+++ b/src/styles/_header.scss
@@ -1,7 +1,8 @@
 .title_users{
     background-color: rgb(97, 14, 142);
-    color: wheat;
+    color: white;
+    text-shadow: 0 0 8px rgba(255, 255, 255, 0.8);
     text-align: center;
     padding: 10px;
-
+    
 }
