--- a/src/styles/_user_list.scss
+++ b/src/styles/_user_list.scss
@@ -2,28 +2,43 @@
     display: flex;
     flex-wrap: wrap;
     gap: 1rem;
-    padding: 5%;
-    margin: 0;
+    margin: 0 auto;
     list-style: none;
-    justify-content: center
-        
+    justify-content: center;
+    max-width: 1200px;
+    padding: 0 1rem;
 }
-.title_of_section{
+.title_of_section_user{
   color: antiquewhite;
+  text-align: center;
+  font-size: 2rem;
+  margin-bottom: 20px;
 }
 
 .user_card {
   flex: 1 1 45%;
-  max-width: 400px;
-  background-color: #f0f0f0;
+  max-width: 500px;
+  background-color: #fff6f6;
   border-radius: 10px;
   padding: 1rem;
   box-shadow: 0 2px 6px rgba(0, 0, 0, 0.1);
-  min-height: 180px;
+  height: 150px;
+  line-height: 1.4;
   cursor: pointer;
+  border: 2px solid #9c65d1; // borde morado
+  box-shadow: 0 0 12px 4px rgba(179, 0, 255, 0.6); // resplandor morado
+}
+.user_card:hover {
+  box-shadow: 0 0 12px 4px rgba(179, 0, 255, 0.6);
+  transform: scale(1.02);
+  transition: box-shadow 0.3s ease, transform 0.3s ease;
 }
 
-
+.name_user_card{
+  color: purple;
+  text-align: center;
+  margin-bottom: 15px;
+}
 
 @media (max-width: 768px) {
   .user_card {
