add footer section

--- a/src/styles/App.scss
+++ b/src/styles/App.scss
@@ -4,6 +4,7 @@
 @use '/src/styles/user_list';
 @use '/src/styles/favoriteUsers';
 @use '/src/styles/containerList';
+@use '/src/styles/footer';
 
 body{
     margin: 0;
